devops/kibana/ingress-es-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ingress-es
  namespace: elk
spec:
  replicas: 1
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: ingress-es
    spec:
      containers:
      - name: ingress-es
        image: gcr.io/google_containers/nginx-ingress-controller:0.8.3
        imagePullPolicy: Always
        ports:
          - containerPort: 5601
        resources:
          limits:
            memory: 150Mi
            cpu: 100m
          requests:
            memory: 150Mi
            cpu: 100m
        args:
          - /nginx-ingress-controller
          - --default-backend-service=elk/default-http-backend
          #- --default-ssl-certificate=elk/kibana-cert
          - --watch-namespace=elk
