devops/kibana/default-http-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
  namespace: elk
  labels:
    app: elasticsearch-logging
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: default-http-backend
