devops/kibana/ingress-lb.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-lb
  namespace: elk
  annotations:
    # type of authentication
    ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropiate context why the authentication is required
    ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  #tls:
  #- hosts:
  #  - some.address.com
  #  secretName: cert-name
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana-logging
          servicePort: 5601
